--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "metapackage",
     "require": {
         "php": "^8.3",
-        "potter/output-buffer-interface": "dev-main"
+        "potter/output-buffer-interface": "dev-main",
+        "potter/output-buffer-aware-interface": "dev-main"
     },
     "license": "MIT",
     "authors": [
